--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
       .d2-home__loading { height: 32px; width: 32px; margin-bottom: 20px; }
     </style>
     <script>
-      var _hmt = _hmt || [];
-      var hmid = "bc38887aa5588add05a38704342ad7e8";
-      (function() { var hm = document.createElement("script"); hm.src = "https://hm.baidu.com/hm.js?" + hmid; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s);})();
+      // var _hmt = _hmt || [];
+      // var hmid = "bc38887aa5588add05a38704342ad7e8";
+      // (function() { var hm = document.createElement("script"); hm.src = "https://hm.baidu.com/hm.js?" + hmid; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s);})();
     </script>
   </head>
   <body>
@@ -35,6 +35,7 @@
         Sorry, D2Admin will not work properly without JavaScript support. Enable JavaScript for browsers and continue.
       </strong>
     </noscript>
+    <!-- todo 自定义 -->
     <div id="app">
       <div class="d2-home">
         <div class="d2-home__main">
